<resources>
    <string name="app_name">ToDo</string>
    <string name="action_settings">Settings</string>
    <string name="subject_label">Subject</string>
    <string name="due_date_label">Due date</string>
    <string name="completed_label">Completed</string>
    <string name="priority_label">Priority</string>
    <string name="category_label">Category</string>
    <string name="status_label">Status</string>
    <string name="notes_label">Notes</string>
    <string name="task_completed">Completed</string>
    <string name="task_in_progress">In Progress</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="subject_is_empty">Subject cannot be empty</string>
    <string name="delete_dialog_title">Are you sure?</string>
    <string name="delete_dialog_message">Are you sure you want to delete this task ?</string>
    <string name="delete_dialog_confirm">Confirm</string>
    <string name="delete_dialog_cancel">Cancel</string>
    <string name="due_date_format">yyyy-MM-dd</string>
    <string name="title_preferences">Application Preferences</string>
    <string name="subject_of_your_task_hint">Subject of your task</string>
    <string name="date_not_set_hint">Date not set</string>
    <string name="priority_of_your_task_hint">Priority of your task</string>
    <string name="category_of_your_task_hint">Category of your task</string>


    <string-array name="priority_items">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>


    <string-array name="navigation_cat_entries">
        <item>All</item>
        <item>Default</item>
        <item>Personal</item>
        <item>Work</item>
    </string-array>
    <string-array name="navigation_cat_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="category_items">
        <item>Default</item>
        <item>Personal</item>
        <item>Work</item>
    </string-array>

    <string-array name="status_items">
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>


    <string-array name="sort_entries">
        <item>Priority</item>
        <item>Due Date</item>
    </string-array>
    <string-array name="sort_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="category_pref_summary">The category list that will be selected at the application startup</string>
    <string name="category_pref_title">Category to show at startup</string>
    <string name="sort_order_pref_title">Sort Order</string>
    <string name="sort_order_pref_summary">The properties that will determine the sort order</string>
    <string name="splash_screen_pref_title">Splash Screen</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_color">Color</string>
    <string name="pref_category_todo">ToDo</string>


</resources>
