<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/todo_edit_subject_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/subject_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/todo_edit_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/todo_edit_subject_label"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/subject_of_your_task_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimaryDark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
            <CheckBox
                android:id="@+id/todo_edit_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="Completed"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimaryDark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/todo_edit_due_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/due_date_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/todo_edit_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/todo_edit_due_date_label"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/date_not_set_hint"
                android:textSize="15sp" />

            <Button
                android:id="@+id/clear_due_date"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/todo_edit_due_date"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/todo_edit_due_date"
                android:background="@mipmap/ic_clear" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimaryDark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/todo_edit_priority_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/priority_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/todo_edit_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/todo_edit_priority_label"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:entries="@array/priority_items"
                android:hint="@string/priority_of_your_task_hint"
                android:textSize="12sp">

            </Spinner>


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimaryDark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/todo_edit_category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/category_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/todo_edit_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/todo_edit_category_label"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:entries="@array/category_items"
                android:hint="@string/category_of_your_task_hint"
                android:textSize="12sp">

            </Spinner>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimaryDark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/todo_edit_notes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/notes_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ScrollView
                android:id="@+id/noteScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/todo_edit_notes_label"
                android:layout_below="@+id/todo_edit_notes_label"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/todo_edit_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Task notes"
                    android:textSize="15sp" />
            </ScrollView>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
